--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div class="contact-wrap">
                 <p class="contact-sentence">ダイビングが趣味の方、ダイビングに興味のある方！<br>一緒に潜りましょう！</p>
                 <h2 class="open">コンタクトフォーム</h2>
-                <di>
+                <div>
                         <label><p>お名前</p><input></label>
                         <label><p>メールアドレス</p><input></label>
                         <label> <p>ご要望</p><textarea></textarea></label>
