--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </div>
 
     <!--ここからコンタクトフォーム-->
-        <div class="contact" id="contact"></div>
+        <div class="contact" id="contact">
             <h1>お誘いのお願い</h1>
             <div class="contact-wrap">
                 <p class="contact-sentence">ダイビングが趣味の方、ダイビングに興味のある方！<br>一緒に潜りましょう！</p>
